# barber-ops

./: .gitignore  README.md  pyproject.toml
barber_ops/: config.py  day.py  drafting.py  models.py  reporting.py  services.py  slots.py
data/: config.yaml  services.yaml
data/demo/: week_fixture.json
docs/: demo-runbook.md
docs/superpowers/plans/: 2026-07-12-barber-ops-phase1.md  2026-07-12-barber-ops-phase2.md  2026-07-14-day-sheet-phase3.md
docs/superpowers/specs/: 2026-07-12-barber-ops-design.md  2026-07-14-day-sheet-design.md
scripts/: build_skill_zips.sh
skills/appointment-management/: SKILL.md
skills/appointment-management/scripts/: detect_no_shows.py  draft_followup.py  propose_slots.py
skills/day-sheet/: SKILL.md
skills/day-sheet/scripts/: day_sheet.py
skills/weekly-summary/: SKILL.md
skills/weekly-summary/scripts/: render_report.py  weekly_summary.py
tests/: conftest.py  test_config.py  test_day.py  test_day_sheet_script.py  test_detect_no_shows.py  test_draft_followup.py  test_drafting.py  test_fixture.py  test_models.py  test_propose_slots.py  test_render_report.py  test_reporting_gaps.py  test_reporting_revenue.py  test_seed_calendar.py  test_services.py  test_slots.py  test_weekly_summary.py
tools/: seed_calendar.py
