[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "barber-ops"
version = "0.1.0"
description = "Barber Ops shared library and Cowork skills package"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["barber_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
